added mirror cube

--- a/RubikCube/index.html
+++ b/RubikCube/index.html
@@ -22,6 +22,10 @@
             <a href="https://goo.gl/Wng0Yf"><img class = "rightimage"  src="images/play_store_badge_en.png"></a>
         </div>
         
+        <div>
+            <h4 align = "center" style="color: #FD5A20">Try out the new mirror cube!</h4>
+        </div>
+        
         <div class="rubik-simulator">
             <canvas class="emscripten" id="canvas" oncontextmenu="event.preventDefault()" height="640px" width="480px"></canvas>
         </div>
