Added the android redirect link

--- a/RubikCube/index_redirect.html
+++ b/RubikCube/index_redirect.html
@@ -27,7 +27,7 @@ var isMobile = {
     };
     
     if ( isMobile.Android() ) {
-        document.location.href = "y";
+        document.location.href = "https://play.google.com/store/apps/details?id=com.maddyworks.rubik_cube";
     }
     else if(isMobile.iOS())
     {
