Added iTunes and standalone link.

--- a/RubikCube/index_redirect.html
+++ b/RubikCube/index_redirect.html
@@ -31,7 +31,9 @@ var isMobile = {
     }
     else if(isMobile.iOS())
     {
-        document.location.href="x";
+        document.location.href="https://itunes.apple.com/in/app/rubik-cube-3d/id1093961746?mt=8";
+    } else {
+      document.location.href="http://rubikcubebyjayanth.github.io/RubikCube/index.html";
     }
 }
 
@@ -41,7 +43,7 @@ window.onload = RedirectFunction;
 </head>
 
 <body>
-Rubik Cube page has loaded
+Please Wait...
 </body>
 </html>
 
