--- a/RubikCube/index.html
+++ b/RubikCube/index.html
@@ -23,7 +23,7 @@
         </div>
         
         <div>
-            <h4 align = "center" style="color: #FD5A20">The game might take a little white to load!</h4>
+            <h4 align = "center" style="color: #FD5A20">The game might take a little white to load on a web page!</h4>
         </div>
       
          <div>
