added headers for fb image

--- a/RubikCube/index_redirect.html
+++ b/RubikCube/index_redirect.html
@@ -1,5 +1,6 @@
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://ogp.me/ns/fb#">
   <head>
+  <meta property="og:image" content="http://rubikcubebyjayanth.github.io/RubikCube/images/RubikFBShare.png" />
       <script type="text/javascript">
 
 function RedirectFunction() {
