updated meta tags

--- a/RubikCube/index_redirect.html
+++ b/RubikCube/index_redirect.html
@@ -1,6 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://ogp.me/ns/fb#">
   <head>
-  <meta property="og:image" content="http://rubikcubebyjayanth.github.io/RubikCube/images/RubikFBShare.png" />
+  <meta property="og:image" content="http://rubikcubebyjayanth.github.io/RubikCube/images/RubikFBShare.png">
+  <meta property="og:image:type" content="image/jpeg">
       <script type="text/javascript">
 
 function RedirectFunction() {
