--- a/RubikCube/rubikcube.html
+++ b/RubikCube/rubikcube.html
@@ -2,6 +2,7 @@
   <head>
   <meta property="og:image" content="http://rubikcubebyjayanth.github.io/RubikCube/images/RubikFBShare.png">
   <meta property="og:image:type" content="image/png">
+  <meta property="og:title" content="Rubik Cube" />
       <script type="text/javascript">
 
 function RedirectFunction() {
