--- a/RubikCube/rubikcube.html
+++ b/RubikCube/rubikcube.html
@@ -3,6 +3,7 @@
   <meta property="og:image" content="http://rubikcubebyjayanth.github.io/RubikCube/images/RubikFBShare.png">
   <meta property="og:image:type" content="image/png">
   <meta property="og:title" content="Rubik Cube" />
+  <meta property="og:description" content="This is the best virtual implementation of the world famous puzzle, Rubik Cube. Invented by Erno Rubik in 1974, it won the Best Puzzle award. 350 million cubes were sold and more continue to sell." />
       <script type="text/javascript">
 
 function RedirectFunction() {
